Corrected alignment of auxiliary keys

--- a/app.css
+++ b/app.css
@@ -10,8 +10,8 @@ body {
 }
 
 .key {
-    flex-grow: 1;
-    padding: 1em;
+    width: 0px;
+    padding: 1em 0 1em 0;
     border: 1px solid black;
     background-color: grey;
     text-align: center;
